--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/xlsx": "^0.0.41",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "prettier": "^3.0.0"
   }
 }
