--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "name": "timeline-viewer",
   "version": "1.0.0",
   "private": true,
+  "homepage": "https://frenor.github.io/timeline",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
-  },
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy":   "gh-pages -d build"
+}
+
+},
   "dependencies": {
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
@@ -18,6 +23,7 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "autoprefixer": "^10.4.17",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.31",
     "prettier": "^3.0.0",
     "sass-embedded": "^1.89.1",
