--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy":   "gh-pages -d dist"
-},
+    "deploy": "gh-pages -d dist"
+  },
   "dependencies": {
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react": "^4.5.2",
     "autoprefixer": "^10.4.17",
     "gh-pages": "^6.3.0",
     "postcss": "^8.4.31",
